--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,5 +1,5 @@
 # Hugo
-title = "My Docs"
+title = "Miraheze Offline Help"
 description = "Congrats on setting up a new Doks project!"
 images = ["cover.png"]
 
@@ -7,7 +7,7 @@ images = ["cover.png"]
 mainSections = ["docs"]
 
 [social]
-  twitter = "getdoks"
+  twitter = "miraheze"
 
 # Doks (@thulite/doks-core)
 [doks]
